--- a/dword/top_1553_summary.html
+++ b/dword/top_1553_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>top_1553 Project Status (04/18/2018 - 13:43:20)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>top_1553 Project Status (06/08/2018 - 11:39:39)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>dword.xise</TD>
@@ -13,11 +13,11 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>top_1553</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Programming File Generated</TD>
+<TD>Programming File Not Generated</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
-<TD>xc6slx25-2ftg256</TD>
+<TD>xc6slx16-2ftg256</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>
 No Errors</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/*.xmsgs?&DataKey=Warning'>491 Warnings (0 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/*.xmsgs?&DataKey=Warning'>606 Warnings (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -60,13 +60,13 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>246</TD>
-<TD ALIGN=RIGHT>30,064</TD>
+<TD ALIGN=RIGHT>212</TD>
+<TD ALIGN=RIGHT>18,224</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>241</TD>
+<TD ALIGN=RIGHT>207</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -90,25 +90,25 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>163</TD>
-<TD ALIGN=RIGHT>15,032</TD>
+<TD ALIGN=RIGHT>153</TD>
+<TD ALIGN=RIGHT>9,112</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>122</TD>
-<TD ALIGN=RIGHT>15,032</TD>
+<TD ALIGN=RIGHT>120</TD>
+<TD ALIGN=RIGHT>9,112</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>88</TD>
+<TD ALIGN=RIGHT>87</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 output only</TD>
-<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>0</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -126,8 +126,8 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Memory</TD>
-<TD ALIGN=RIGHT>10</TD>
-<TD ALIGN=RIGHT>3,664</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>2,176</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -144,13 +144,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number used as Shift Register</TD>
-<TD ALIGN=RIGHT>10</TD>
+<TD ALIGN=RIGHT>6</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>10</TD>
+<TD ALIGN=RIGHT>6</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -168,13 +168,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>31</TD>
+<TD ALIGN=RIGHT>27</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice register load</TD>
-<TD ALIGN=RIGHT>31</TD>
+<TD ALIGN=RIGHT>27</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -192,38 +192,38 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>80</TD>
-<TD ALIGN=RIGHT>3,758</TD>
-<TD ALIGN=RIGHT>2%</TD>
+<TD ALIGN=RIGHT>71</TD>
+<TD ALIGN=RIGHT>2,278</TD>
+<TD ALIGN=RIGHT>3%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of MUXCYs used</TD>
 <TD ALIGN=RIGHT>8</TD>
-<TD ALIGN=RIGHT>7,516</TD>
+<TD ALIGN=RIGHT>4,556</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>242</TD>
+<TD ALIGN=RIGHT>217</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>39</TD>
-<TD ALIGN=RIGHT>242</TD>
-<TD ALIGN=RIGHT>16%</TD>
+<TD ALIGN=RIGHT>42</TD>
+<TD ALIGN=RIGHT>217</TD>
+<TD ALIGN=RIGHT>19%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>79</TD>
-<TD ALIGN=RIGHT>242</TD>
-<TD ALIGN=RIGHT>32%</TD>
+<TD ALIGN=RIGHT>64</TD>
+<TD ALIGN=RIGHT>217</TD>
+<TD ALIGN=RIGHT>29%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>124</TD>
-<TD ALIGN=RIGHT>242</TD>
+<TD ALIGN=RIGHT>111</TD>
+<TD ALIGN=RIGHT>217</TD>
 <TD ALIGN=RIGHT>51%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -234,8 +234,8 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>56</TD>
-<TD ALIGN=RIGHT>30,064</TD>
+<TD ALIGN=RIGHT>54</TD>
+<TD ALIGN=RIGHT>18,224</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -253,13 +253,13 @@ System Settings</A>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of RAMB16BWERs</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>52</TD>
+<TD ALIGN=RIGHT>32</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of RAMB8BWERs</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>104</TD>
+<TD ALIGN=RIGHT>64</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -300,13 +300,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFG/BUFGMUXs</TD>
-<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>4</TD>
 <TD ALIGN=RIGHT>16</TD>
-<TD ALIGN=RIGHT>31%</TD>
+<TD ALIGN=RIGHT>25%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as BUFGs</TD>
-<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>4</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -337,19 +337,19 @@ System Settings</A>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of ILOGIC2/ISERDES2s</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>272</TD>
+<TD ALIGN=RIGHT>248</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of IODELAY2/IODRP2/IODRP2_MCBs</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>272</TD>
+<TD ALIGN=RIGHT>248</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of OLOGIC2/OSERDES2s</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>272</TD>
+<TD ALIGN=RIGHT>248</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -361,7 +361,7 @@ System Settings</A>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFHs</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>160</TD>
+<TD ALIGN=RIGHT>128</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -379,7 +379,7 @@ System Settings</A>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of DSP48A1s</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>38</TD>
+<TD ALIGN=RIGHT>32</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -426,7 +426,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>2.98</TD>
+<TD ALIGN=RIGHT>3.14</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -463,22 +463,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\top_1553.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Wed Apr 18 13:42:34 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/xst.xmsgs?&DataKey=Warning'>487 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/xst.xmsgs?&DataKey=Info'>32 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\top_1553.bld'>Translation Report</A></TD><TD>Current</TD><TD>Wed Apr 18 13:42:40 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\top_1553_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Wed Apr 18 13:42:50 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/map.xmsgs?&DataKey=Info'>10 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\top_1553.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Wed Apr 18 13:43:02 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/par.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\top_1553.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Jun 8 12:26:22 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/xst.xmsgs?&DataKey=Warning'>602 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/xst.xmsgs?&DataKey=Info'>39 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\top_1553.bld'>Translation Report</A></TD><TD>Current</TD><TD>Fri Jun 8 12:26:29 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\top_1553_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Fri Jun 8 12:26:41 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/map.xmsgs?&DataKey=Info'>10 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\top_1553.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Fri Jun 8 12:26:58 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/par.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\top_1553.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Wed Apr 18 13:43:07 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\top_1553.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Wed Apr 18 13:43:17 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\top_1553.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Fri Jun 8 12:27:04 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\top_1553.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Fri Jun 8 12:27:13 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Wed Apr 18 10:07:30 2018</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Apr 18 13:43:17 2018</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Apr 18 13:43:20 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Apr 19 10:23:58 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Jun 8 12:27:14 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/tfranklin9/projects/1553/dword\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Jun 8 12:27:18 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/18/2018 - 13:43:21</center>
+<br><center><b>Date Generated:</b> 06/08/2018 - 12:27:53</center>
 </BODY></HTML>
